--- a/config/database.yml
+++ b/config/database.yml
@@ -26,21 +26,21 @@
 
 
 development:
-   adapter: mysql
+   adapter: mysql2
    database: library_development
    username: root
    password: 
    host: localhost
 	
 test:
-   adapter: mysql
+   adapter: mysql2
    database: library_test
    username: root
    password: 
    host: localhost
    
 production:
-   adapter: mysql
+   adapter: mysql2
    database: library_production
    username: root
    password: 
